--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "module": "./src/index.ts",
     "scripts": {
         "dev": "bun run --watch src/index.ts",
-        "build": "bun build src/index.ts --compile --outfile xes_coding_helper.exe --production"
+        "build": "bun build src/index.ts --compile --outfile xes_coding_helper --production"
     },
     "devDependencies": {
         "@types/bun": "^1.3.9"
