--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
         "build": "bun build src/index.ts --compile --outfile xes_coding_helper --production"
     },
     "devDependencies": {
-        "@types/bun": "^1.3.9"
+        "@types/bun": "^1.3.9",
+        "@types/react": "^19.2.14",
+        "@types/react-dom": "^19.2.3"
     },
     "peerDependencies": {
         "typescript": "latest"
+    },
+    "dependencies": {
+        "bun-plugin-tailwind": "^0.1.2",
+        "react": "^19.2.4",
+        "react-dom": "^19.2.4",
+        "tailwindcss": "^4.2.1"
     }
 }
