--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "moduleDetection": "force",
         "jsx": "react-jsx",
         "allowJs": true,
-        "types": ["bun"],
+        "types": ["bun", "react-dom"],
 
         // Bundler mode
         "moduleResolution": "bundler",
