--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "module": "./src/index.ts",
     "scripts": {
         "dev": "bun run --watch src/index.ts",
-        "build": "bun build src/index.ts --compile --outfile xes_coding_helper --production"
+        "build:css": "tailwindcss -i ./src/lib/webui/style.css -o ./src/lib/webui/styles.gen.css --minify",
+        "build": "bun build src/index.ts --compile --bytecode --outfile xes_coding_helper --production --minify-whitespace --minify-syntax --minify-identifiers"
     },
     "devDependencies": {
         "@types/bun": "^1.3.9",
@@ -16,6 +17,7 @@
         "typescript": "latest"
     },
     "dependencies": {
+        "@tailwindcss/cli": "^4.2.1",
         "bun-plugin-tailwind": "^0.1.2",
         "react": "^19.2.4",
         "react-dom": "^19.2.4",
